# Metal-Model-Viewer

./: .clang-format  .gitignore  CMakeLists.txt  Info.plist  LICENSE  README.md
src/: AppDelegate.h  AppDelegate.mm  GLTFLoader.h  GLTFLoader.mm  MathBase.h  Renderer.h  Renderer.mm  Shaders.metal  ViewController.h  ViewController.mm  main.mm
